add tiny_trace_plugin
